--- a/DZ1_2/Build.gradle
+++ b/DZ1_2/Build.gradle
@@ -1,3 +1,11 @@
 apply plugin: 'java'
 apply plugin: 'application'
-mainClassName = "ru.stqa.pft.DZ1_2.MainDZ1_2"
+mainClassName = "ru.stqa.pft.DZ.MainDZ"
+
+repositories{
+    mavenCentral()
+}
+
+dependencies{
+    compile 'org.testng:testng:6.10'
+}
